cabal-version: 2.2

name:           entangled
version:        1.0.0.0
synopsis:       bi-directional tangle daemon for literate programming
description:    Please see the README on GitHub at <https://github.com/jhidding/entangled#readme>
category:       Development
homepage:       https://jhidding.github.io/enTangleD
bug-reports:    https://github.com/jhidding/enTangleD/issues
author:         Johan Hidding
maintainer:     j.hidding@esciencecenter.nl
copyright:      2018-2019 Johan Hidding, Netherlands eScience Center
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md
    scripts/tangle
    scripts/weave
    scripts/annotate-code-blocks.lua
    scripts/list.lua
    scripts/tangle.lua
    scripts/header.html
    scripts/style.css
    scripts/eisvogel.tex

source-repository head
  type: git
  location: https://github.com/jhidding/enTangleD

common deps
  build-depends:
      array >=0.5 && <1
    , base >=4.7 && <5
    , containers >=0.5.9 && <0.7
    , directory >=1.3 && <2
    , either >=5 && <6
    , exceptions >=0.10 && <0.11
    , extra >=1.6 && <2
    , filepath >=1.4 && <2
    , fsnotify >=0.3 && <0.4
    , megaparsec >=7.0 && <8
    , microlens-platform >=0.3 && <0.5
    , mtl >=2.2 && <3
    , prettyprinter >=1.2 && <2
    , prettyprinter-ansi-terminal >=1.1 && <2
    , random >=1.0 && <2
    , sqlite-simple >=0.4.16 && <0.5
    , terminal-size >=0.3 && <1
    , transformers >=0.5 && <0.6
    , text >=1.2 && <2
    , time >=1.8 && <2
    , tomland >=1.2 && <2
    , uuid >=1.3 && <2
  default-extensions: OverloadedStrings FlexibleContexts FlexibleInstances RecordWildCards TypeFamilies GeneralizedNewtypeDeriving NamedFieldPuns
  default-language: Haskell2010
  ghc-options: -fwarn-unused-imports

library
  import: deps
  exposed-modules:
      Config
      Document
      Tangle
      Console
      Logging
      ListStream
      Comment
      Stitch
      Attributes
      TextUtil
      Daemon
      Database
  other-modules:
      Paths_entangled
  autogen-modules:
      Paths_entangled
  hs-source-dirs:
      src

executable entangled
  import: deps
  main-is: Main.hs
  other-modules:
      Paths_entangled
  autogen-modules:
      Paths_entangled
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      entangled
    , optparse-applicative >=0.15 && <0.16

test-suite entangled-test
  import: deps
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      ListStreamSpec
      TangleSpec
      TextUtilSpec
      Paths_entangled
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O0
  build-depends:
    , entangled
    , QuickCheck >=2.13 && <3
    , hspec >=2.5 && <3
    , hspec-megaparsec >=2.0 && <3
    , quickcheck-instances >=0.3.22 && <0.4
