cabal-version: 2.2

name:           entangled
version:        1.4.0
synopsis:       bi-directional tangle daemon for literate programming
description:    Please see the README on GitHub at <https://github.com/entangled/entangled/#readme>
category:       Development
homepage:       https://entangled.github.io/
bug-reports:    https://github.com/entangled/entangled/issues
author:         Johan Hidding
maintainer:     j.hidding@esciencecenter.nl
copyright:      2018-2020 Johan Hidding, Netherlands eScience Center
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
data-files:
    data/schema.sql
    data/config-schema.dhall
    data/example-config.dhall
    data/minimal-config.dhall

source-repository head
  type: git
  location: https://github.com/entangled/entangled

common deps
  build-depends:
      array >=0.5 && <1
    , base >=4.7 && <5
    , containers >=0.5.9 && <0.7
    , dhall >=1.40 && <2
    , directory >=1.3 && <2
    , either >=5 && <6
    , exceptions >=0.10 && <0.11
    , extra >=1.6 && <2
    , filepath >=1.4 && <2
    , fsnotify >=0.3 && <0.4
    , Glob >=0.10 && <0.11
    , megaparsec >=9.0 && <10
    , monad-logger >=0.3.30 && < 0.4
    , mtl >=2.2 && <3
    , prettyprinter >=1.2 && <2
    , prettyprinter-ansi-terminal >=1.1 && <2
    , regex-tdfa >=1.3 && <2
    , rio >=0.1.15 && <0.2
    , sqlite-simple >=0.4.16 && <0.5
    , terminal-size >=0.3 && <1
    , text >=1.2 && <2
    , time >=1.8 && <2
    , transformers >=0.5 && <0.7
    , milkshake
  default-extensions:
        OverloadedStrings FlexibleContexts FlexibleInstances RecordWildCards
        TypeFamilies GeneralizedNewtypeDeriving NamedFieldPuns LambdaCase
        DeriveGeneric NoImplicitPrelude
  default-language: Haskell2010
  ghc-options: -Wall

library
  import: deps
  exposed-modules:
      Attributes
      Comment
      Config
      Config.Version_1_0_0
      Config.Version_1_2_0
      Config.Version_1_3_0
      Config.Version_1_4_0
      Config.Record
      Console
      Daemon
      Database
      Document
      Entangled
      Errors
      FileIO
      Format
      Linters
      ListStream
      Select
      Stitch
      Tangle
      TextUtil
      Transaction
  other-modules:
      Paths_entangled
  autogen-modules:
      Paths_entangled
  hs-source-dirs:
      src

executable entangled
  import: deps
  main-is: Main.hs
  other-modules:
      Commands.Common
      Commands.Config
      Commands.Insert
      Commands.List
      Commands.Shake
      Commands.Stitch
      Commands.Tangle
      Paths_entangled
  autogen-modules:
      Paths_entangled
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      entangled
    , optparse-applicative >=0.15 && <0.16

test-suite entangled-test
  import: deps
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      ListStreamSpec
      TextUtilSpec
      Paths_entangled
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O0
  build-depends:
    , entangled
    , QuickCheck >=2.13 && <3
    , hspec >=2.5 && <3
    , hspec-megaparsec >=2.0 && <3
    , quickcheck-instances >=0.3.22 && <0.4
